# skyscout-ai

./: .copilotrc.json  .eslintignore  .eslintrc.json  .gitignore  ARCHITECTURE_QUALITY_REPORT.md  ARCHITECTURE_RESTRUCTURING_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT.md  ENTERPRISE_ARCHITECTURE_10_10.md  HYDRATION_FIX.md  LICENSE  PERFORMANCE_MONITORING_COMPLETION.md  PROGRESSIVE_DISCLOSURE_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  RESTRUCTURING_SUMMARY.md  SECURITY.md  WEB_APP_STATUS.md  cspell.json  docker-compose.yml  lighthouse-report.report.html  lighthouse-report.report.json  lighthouse.config.js  nx.json  package-lock.json  package.json  skyscout-ai.code-workspace  tsconfig.base.json  tsconfig.json
.github/: AI_CONTEXT_GUIDE.md  AI_DEVELOPMENT_GUIDE.md  AI_TASK_QUEUE.md  COPILOT_POWER_TIPS.md  PROJECT_VISION.md  autonomous-config.json  claude-desktop-config.json  copilot-instructions.md  dependabot.yml  repository-config.json
apps/api/: .env.example  (+3 more)
apps/search-engine/: Cargo.toml  Dockerfile
apps/search-engine/src/: main.rs
docs/: DEVELOPMENT.md  README.md  architecture.md  clean-architecture-guide.md  clean-code-refactoring.md  hero-section-psychology.md  performance-guide.md  skyscout-ai-styling-guide.md
infra/: README.md
nginx/: nginx.conf
scripts/: README.md  cleanup.sh  optimize-performance.sh  verify-structure.sh
tooling/: .eslintrc.js  .prettierrc  PERFORMANCE_REPORT.md  README.md  TOOLING.md  cli.ts  development-tooling.js  package-lock.json  package.json  setup-enhanced-tooling.ts  setup-tooling.js  tsconfig.json
(+406 files in other folders)
