[package]
name = "skyscout-search-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elasticsearch = "8.5.0-alpha.1"
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
config = "0.14"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
